Fix Twitter link alignment on mobile
- Reduce Twitter link margin from 4rem to 0.5rem on mobile screens
- Add flex-wrap and center alignment for mobile navigation
- Improve social link spacing on mobile devices
- Fix mobile navigation layout issues

--- a/templates/static/css/style.css
+++ b/templates/static/css/style.css
@@ -1023,6 +1023,13 @@ body:has(.navigation-page) .col-xl-8,
     .navbar-nav {
         flex-direction: row;
         gap: 0.25rem;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    
+    .navbar-nav .social-link {
+        margin-left: 0.5rem;
+        margin-right: 0.5rem;
     }
     
     .brand-logo-text {
@@ -1581,6 +1588,12 @@ main.container .card {
 
 .twitter-link {
     margin-left: 4rem;
+}
+
+@media (max-width: 768px) {
+    .twitter-link {
+        margin-left: 0rem;
+    }
 }
 
 .twitter-link:hover {
